# self-chatter

./: README.md  pyproject.toml
src/self_chatter/: __init__.py  main.py
